# bayesian-pathfinding

./: .gitignore  README.md
bayesian_python/: README.md  main_pipeline.py
bayesian_python/bim/: dicelab_bim.fbx  dicelab_bim.stl
bayesian_python/fields/: dynamic_repulsion_manager.py  repulsive_field.py
bayesian_python/grid/: grid_generator.py  node.py
bayesian_python/pathfinding/: mhastar.py
bayesian_python/utils/: bayesian_repulsion_updater.py  bim_integration.py  extract_fbx_objects.py  (+1 more)
ros_ws/src/pathfinding_simulation/: CMakeLists.txt  README.md  package.xml  setup.py
ros_ws/src/pathfinding_simulation/config/: diff_drive_controller.yaml
ros_ws/src/pathfinding_simulation/launch/: amcl.launch  bim_world.launch  navigation.launch  robot_navigation.launch  robot_simulation.launch
ros_ws/src/pathfinding_simulation/maps/: dicelab_map.pgm  dicelab_map.yaml
ros_ws/src/pathfinding_simulation/models/dicelab_bim/: model.config  model.sdf
ros_ws/src/pathfinding_simulation/models/dicelab_bim/meshes/: dicelab_BIM.dae  dicelab_BIM.fbx  dicelab_BIM.stl  dicelab_BIM_old.stl  extracted_objects.json  extracted_objects_old.json  extracted_objects_with_danger.json
ros_ws/src/pathfinding_simulation/rviz/: pathfinding.rviz
ros_ws/src/pathfinding_simulation/scripts/: path_follower_node  pathfinding_node  smha_star_server
ros_ws/src/pathfinding_simulation/src/pathfinding_simulation/: path_follower_node.py  pathfinding_node.py  pathfinding_walker.py
ros_ws/src/pathfinding_simulation/src/pathfinding_simulation/fields/: dynamic_repulsion_manager.py
ros_ws/src/pathfinding_simulation/src/pathfinding_simulation/grid/: grid_generator_open3d.py  make_occupancy.py  node.py
ros_ws/src/pathfinding_simulation/src/pathfinding_simulation/pathfinding/: mhastar.py
ros_ws/src/pathfinding_simulation/src/pathfinding_simulation/utils/: bayesian_repulsion_updater.py  bim_integration.py  extract_fbx_objects.py
ros_ws/src/pathfinding_simulation/srv/: StartGoalPath.srv
ros_ws/src/pathfinding_simulation/worlds/: dicelab.world
