<?xml version="1.0"?>
<package format="2">
  <name>pathfinding_simulation</name>
  <version>0.0.1</version>
  <description>A package for testing Go1 pathfinding in simulation</description>

  <maintainer email="bbeheshtishira7627@sdsu.edu">Behrad</maintainer>
  <license>MIT</license>

  <!-- Catkin build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Python & occupancy grid -->
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
